			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Reduce cases that cause a long delay in halt with the
    message "<N> threads wouldn't die"

===============================
VERSION 5.6.31 (March 16, 2007)
===============================

  * FIXED: told/seen underflow in lock-count on stream. Steffen Schwigon.

  * FIXED: do not stop break-level after exception.  Paulo Moura.

  * ADDED: Safety check in PL_new_term_ref() and PL_new_term_refs().
    Ben Chistador.

  * FIXED: Restoring generate_debug_info flag over loading .qlf files.
    Mike Elston.

  * FIXED: library(base64): Determinism while decoding.

  * PORT: Bug#266: Ensure package build exits on first error.  Keri Harris.

===============================
VERSION 5.6.30 (March 08, 2007)
===============================

  * ADDED: powm(Base, Exp, Modulo) function if GMP support is provided.

  * MODIFIED: Allow qcompile/1 on files that do not have the standard
    extension.  Mike Elston.

  * FIXED: Determinsm in contains_term/2 and contains_var/2 (library
    assoc.pl).

  * ADDED: Library record: provide access to named fields in a term.
    After specs by Richard O'Keefe.

  * CLEANUP: Call message system for undefined exported predicates.
    Mike Elston.

  * FIXED: plld to honour -o with -c (when used as compiler frontend).

  * FIXED: Possible alignment issue when accessing read/write buffers using
    wchar_t.  Andreas Greve.

  * MODIFIED: Changed default stack-sizes to 16MB local and 32MB global
    and trail.  Should not affect anything, except applications creating
    many threads.  It is adviced to specify stack-sizes with thread_create/3
    in such applications.

  * FIXED: index/1 didn't clean hash-info.   Samer Abdallah.
