@@ -392,10 +392,19 @@ direct interaction with the GNU readline library. See also
 \manref{readline}{3}
 
 \begin{description}
+
     \predicate{rl_read_init_file}{1}{+File}
 Read a readline initialisation file.  Readline by default reads
 \file{~/.inputrc}.  This predicate may be used to read alternative
 readline initialisation files.
+
     \predicate{rl_add_history}{1}{+Line}
 Add a line to the Control-P/Control-N history system of the readline library.
+
+    \predicate{rl_write_history}{1}{+FileName}
+Write current history to \arg{FileName}.  Can be used from at_halt/1
+to save the history.
+
+    \predicate{rl_read_history}{1}{+FileName}
+Read history from \arg{FileName}, appending to the current history.
 \end{description}
